// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Has a valid snapshot 1`] = `
<section
  className="ant-layout"
>
  <header
    className="ant-layout-header"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <form
        onSubmit={[Function]}
      >
        <div
          style={
            Object {
              "display": "inline-block",
              "padding": "1.5rem",
              "width": "30rem",
            }
          }
        >
          <span
            className="ant-input-affix-wrapper search-container_input-search"
            onMouseUp={[Function]}
          >
            <input
              className="ant-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Rechercher sur le serveur"
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-suffix"
            >
              <span
                aria-label="close-circle"
                className="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
                onClick={[Function]}
                role="button"
                tabIndex={-1}
              >
                <svg
                  aria-hidden="true"
                  data-icon="close-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                  />
                </svg>
              </span>
            </span>
          </span>
          <button
            className="ant-btn ant-btn-secondary"
            onClick={[Function]}
            style={
              Object {
                "marginRight": "2rem",
              }
            }
            type="button"
          >
            <span>
              &lt;&lt;
            </span>
          </button>
          <button
            className="ant-btn ant-btn-primary"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-label="search"
              className="anticon anticon-search"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="search"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                />
              </svg>
            </span>
            <span>
              Rechercher sur le serveur
            </span>
          </button>
          <button
            className="ant-btn ant-btn-secondary"
            onClick={[Function]}
            style={
              Object {
                "marginLeft": "2rem",
              }
            }
            type="button"
          >
            <span>
              &gt;&gt;
            </span>
          </button>
        </div>
      </form>
    </div>
  </header>
  <main
    className="ant-layout-content"
    style={
      Object {
        "padding": "0 50px",
      }
    }
  >
    <div
      className="site-layout-content"
    >
      <div
        className="search-container"
        style={
          Object {
            "float": "right",
            "height": "4rem",
          }
        }
      >
        <div
          className="search-container_input-search"
        >
          <span
            className="ant-input-affix-wrapper search-container_input-search"
            onMouseUp={[Function]}
          >
            <input
              className="ant-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Recherche par titre ou url"
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-suffix"
            >
              <span
                aria-label="close-circle"
                className="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
                onClick={[Function]}
                role="button"
                tabIndex={-1}
              >
                <svg
                  aria-hidden="true"
                  data-icon="close-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                  />
                </svg>
              </span>
            </span>
          </span>
        </div>
      </div>
      <div
        className="search-container"
        style={
          Object {
            "float": "right",
            "height": "4rem",
          }
        }
      >
        <div
          className="search-container_input-search"
        >
          <span
            className="ant-input-affix-wrapper search-container_input-search"
            onMouseUp={[Function]}
          >
            <input
              className="ant-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Recherche par points"
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-suffix"
            >
              <span
                aria-label="close-circle"
                className="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
                onClick={[Function]}
                role="button"
                tabIndex={-1}
              >
                <svg
                  aria-hidden="true"
                  data-icon="close-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                  />
                </svg>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      className="site-layout-content"
    />
  </main>
  <footer
    className="ant-layout-footer"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    Moreno Steenwinckel Rafael - Analyst/Scrum Master
  </footer>
</section>
`;

exports[`Search Has a valid snapshot 1`] = `
<div
  className="search-container"
  style={
    Object {
      "float": "right",
      "height": "4rem",
    }
  }
>
  <div
    className="search-container_input-search"
  >
    <span
      className="ant-input-affix-wrapper search-container_input-search"
      onMouseUp={[Function]}
    >
      <input
        className="ant-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        style={null}
        type="text"
        value=""
      />
      <span
        className="ant-input-suffix"
      >
        <span
          aria-label="close-circle"
          className="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
          onClick={[Function]}
          role="button"
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
            />
          </svg>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Table Has a valid snapshot 1`] = `
<div>
  <div
    className="ant-table-wrapper"
  >
    <div
      className="ant-spin-nested-loading"
    >
      <div
        className="ant-spin-container"
      >
        <div
          className="ant-table ant-table-bordered ant-table-empty"
        >
          <div
            className="ant-table-container"
          >
            <div
              className="ant-table-content"
              onScroll={[Function]}
              style={Object {}}
            >
              <table
                style={
                  Object {
                    "tableLayout": "auto",
                  }
                }
              >
                <colgroup />
                <thead
                  className="ant-table-thead"
                >
                  <tr>
                    <th
                      className="ant-table-cell ant-table-column-has-sorters"
                      colSpan={null}
                      onClick={[Function]}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-table-column-sorters-with-tooltip"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="ant-table-column-sorters"
                        >
                          <span>
                            Title
                          </span>
                          <span
                            className="ant-table-column-sorter ant-table-column-sorter-full"
                          >
                            <span
                              className="ant-table-column-sorter-inner"
                            >
                              <span
                                aria-label="caret-up"
                                className="anticon anticon-caret-up ant-table-column-sorter-up"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="caret-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                  />
                                </svg>
                              </span>
                              <span
                                aria-label="caret-down"
                                className="anticon anticon-caret-down ant-table-column-sorter-down"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="caret-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </th>
                    <th
                      className="ant-table-cell ant-table-column-has-sorters"
                      colSpan={null}
                      onClick={[Function]}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-table-column-sorters-with-tooltip"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="ant-table-column-sorters"
                        >
                          <span>
                            Author
                          </span>
                          <span
                            className="ant-table-column-sorter ant-table-column-sorter-full"
                          >
                            <span
                              className="ant-table-column-sorter-inner"
                            >
                              <span
                                aria-label="caret-up"
                                className="anticon anticon-caret-up ant-table-column-sorter-up"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="caret-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                  />
                                </svg>
                              </span>
                              <span
                                aria-label="caret-down"
                                className="anticon anticon-caret-down ant-table-column-sorter-down"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="caret-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </th>
                    <th
                      className="ant-table-cell ant-table-column-has-sorters"
                      colSpan={null}
                      onClick={[Function]}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-table-column-sorters-with-tooltip"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="ant-table-column-sorters"
                        >
                          <span>
                            Num. comments
                          </span>
                          <span
                            className="ant-table-column-sorter ant-table-column-sorter-full"
                          >
                            <span
                              className="ant-table-column-sorter-inner"
                            >
                              <span
                                aria-label="caret-up"
                                className="anticon anticon-caret-up ant-table-column-sorter-up"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="caret-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                  />
                                </svg>
                              </span>
                              <span
                                aria-label="caret-down"
                                className="anticon anticon-caret-down ant-table-column-sorter-down"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="caret-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </th>
                    <th
                      className="ant-table-cell ant-table-column-has-sorters"
                      colSpan={null}
                      onClick={[Function]}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-table-column-sorters-with-tooltip"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="ant-table-column-sorters"
                        >
                          <span>
                            Points
                          </span>
                          <span
                            className="ant-table-column-sorter ant-table-column-sorter-full"
                          >
                            <span
                              className="ant-table-column-sorter-inner"
                            >
                              <span
                                aria-label="caret-up"
                                className="anticon anticon-caret-up ant-table-column-sorter-up"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="caret-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                  />
                                </svg>
                              </span>
                              <span
                                aria-label="caret-down"
                                className="anticon anticon-caret-down ant-table-column-sorter-down"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="caret-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </th>
                    <th
                      className="ant-table-cell"
                      colSpan={null}
                      rowSpan={null}
                      style={Object {}}
                    >
                      Url
                    </th>
                    <th
                      className="ant-table-cell"
                      colSpan={null}
                      rowSpan={null}
                      style={Object {}}
                    >
                      Actions
                    </th>
                  </tr>
                </thead>
                <tbody
                  className="ant-table-tbody"
                >
                  <tr
                    className="ant-table-placeholder"
                    style={
                      Object {
                        "display": null,
                      }
                    }
                  >
                    <td
                      className="ant-table-cell"
                      colSpan={6}
                      rowSpan={null}
                      style={Object {}}
                    >
                      <div
                        className="ant-empty ant-empty-normal"
                      >
                        <div
                          className="ant-empty-image"
                        >
                          <svg
                            className="ant-empty-img-simple"
                            height="41"
                            viewBox="0 0 64 41"
                            width="64"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fillRule="evenodd"
                              transform="translate(0 1)"
                            >
                              <ellipse
                                className="ant-empty-img-simple-ellipse"
                                cx="32"
                                cy="33"
                                rx="32"
                                ry="7"
                              />
                              <g
                                className="ant-empty-img-simple-g"
                                fillRule="nonzero"
                              >
                                <path
                                  d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                />
                                <path
                                  className="ant-empty-img-simple-path"
                                  d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                />
                              </g>
                            </g>
                          </svg>
                        </div>
                        <p
                          className="ant-empty-description"
                        >
                          No Data
                        </p>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
